scripts/nullaway/annotator/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8.txt
../annotator/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Pool.java:71: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../annotator/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Client.java:42: error: [NullAway] initializer method does not guarantee @NonNull fields inbox (line 32), outbox (line 33) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Client() {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Client.java:44: error: [NullAway] assigning @Nullable expression to @NonNull field
		inbox = null;
		      ^
    (see http://t.uber.com/nullaway )
../annotator/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Client.java:45: error: [NullAway] assigning @Nullable expression to @NonNull field
		outbox = null;
		       ^
    (see http://t.uber.com/nullaway )
../annotator/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Client.java:78: error: [NullAway] dereferenced expression mySocket is @Nullable
			mySocket.close();
			        ^
    (see http://t.uber.com/nullaway )
../annotator/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/HintClient.java:95: error: [NullAway] dereferenced expression hand is @Nullable
		while (hand.getNumTiles() > 0) {
		           ^
    (see http://t.uber.com/nullaway )
../annotator/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/GameInfo.java:164: error: [NullAway] enhanced-for expression melds is @Nullable
		for(Set set : melds)
		              ^
    (see http://t.uber.com/nullaway )
../annotator/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/RAIclient.java:24: error: [NullAway] initializer method does not guarantee @NonNull fields client (line 9), game (line 12), hand (line 13) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public RAIclient(String serverIP, int port){
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/RAIclient.java:30: error: [NullAway] assigning @Nullable expression to @NonNull field
			game = null;
			     ^
    (see http://t.uber.com/nullaway )
../annotator/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/RAIclient.java:31: error: [NullAway] assigning @Nullable expression to @NonNull field
			hand = null;
			     ^
    (see http://t.uber.com/nullaway )
../annotator/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/RAIclient.java:208: error: [NullAway] enhanced-for expression melds is @Nullable
		for(Meld meld : melds)
		                ^
    (see http://t.uber.com/nullaway )
../annotator/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Server.java:106: error: [NullAway] initializer method does not guarantee @NonNull fields pool (line 47), hands (line 48), game (line 50) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Server(int numPlayers){
           ^
    (see http://t.uber.com/nullaway )
../annotator/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Server.java:112: error: [NullAway] assigning @Nullable expression to @NonNull field
        pool = null;
             ^
    (see http://t.uber.com/nullaway )
../annotator/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Server.java:113: error: [NullAway] assigning @Nullable expression to @NonNull field
        hands = null;
              ^
    (see http://t.uber.com/nullaway )
../annotator/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Server.java:114: error: [NullAway] assigning @Nullable expression to @NonNull field
    	game = null;
    	     ^
    (see http://t.uber.com/nullaway )
../annotator/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Server.java:397: error: [NullAway] dereferenced expression serverSocket is @Nullable
			serverSocket.close();
			            ^
    (see http://t.uber.com/nullaway )
../annotator/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Move.java:111: error: [NullAway] dereferenced expression endPositions.get(key) is @Nullable
			for(int j=0; j<endPositions.get(key).size(); j++){
			                                    ^
    (see http://t.uber.com/nullaway )
Note: ../annotator/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/GameInfo.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
17 errors
